# coindicator

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  coindicator.desktop  config.yaml  install.sh  package-lock.json  pyproject.toml  pyvenv.cfg  requirements.txt  run.sh  setup.cfg  setup.py  startmany.py  startmany.yaml
coin/: about.py  alarm.py  api_client.py  asset_selection.py  async_downloader.py  coin.py  downloader.py  error.py  exchange.py  indicator.py  plugin_selection.py  settings.py  startmany-btx.yaml  startmany.yaml  test.py  utils.py
coin/data/: binance.cache  bitfinex.cache  bitstamp.cache  bittrex.cache  cexio.cache  gdax.cache  gemini.cache  hitbtc.cache  kraken.cache  okcoin.cache  poloniex.cache  unocoin.cache
coin/exchange/: __init__.py  bitfinex.py  bitstamp.py  bittrex.py  bityep.py  btce.py  bxinth.py  error.py  exchange.py  gdax.py  gemini.py  kraken.py  mtgox.py
coin/exchanges/: binance.conf  binance.py  bitfinex.conf  bitfinex.py  bitkub.py  bitstamp.conf  bitstamp.py  bittrex.conf  bittrex.py  bxinth.conf  bxinth.py  cexio.py  gdax.conf  gdax.py  gemini.conf  gemini.py  hitbtc.py  kraken.conf  kraken.py  mxc.py  okcoin.py  poloniex.py  unocoin.py  wazirx.py
coin/exchanges/data/: binance.conf  bitfinex.conf  bitstamp.conf  bittrex.conf  bxinth.conf  cexio.conf  gdax.conf  (+5 more)
resources/: org.nil.indicator.coinprice.gschema.xml
src/coin/: about.py  alarm.py  asset_selection.py  coin.py  coingecko_client.py  config.py  config.yaml  downloader.py  error.py  exchange.py  indicator.py  plugin_selection.py
(+15 files in other folders)
