[metadata]
name = coindicator
description = Coinprice Indicator
author = Sander Van de Moortel
author_email = sander.vandemoortel@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bluppfisk/coindicator/
project_urls =
    Documentation = https://github.com/bluppfisk/coindicator/
platforms = Linux
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[easy_install]

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires=
    certifi~=2018.8.24
    chardet~=3.0.4
    idna~=2.7
    notify2~=0.3.1
    PyYAML>=4.2b1
    requests~=2.20
    urllib3~=1.26.5
    pygame~=2.1.2
    PyGObject~=3.42.2
    pycairo~=1.21.0
    dbus-python~=1.3.2

[options.packages.find]
where =
    src

[options.package_data]
* =
    config.yaml
    resources/*

[options.extras_require]
develop =
    flake8
    black
    virtualenv
    build
    setuptools_scm

[options.entry_points]
console_scripts =
    coindicator = coin.coin:main

[bdist_wheel]
# Use this option if your package is pure-python
# universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    build
    dist
    .eggs
